# pytorch_docker

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
