[tool.poetry]
name = "pytorch-docker"
version = "0.1.0"
description = ""
authors = ["Koki Yamada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu121", source = "torch_cu121"}
torchvision = {version = "^0.16.0+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.1.0+cu121", source = "torch_cu121"}


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
