[tool.poetry]
name = "pytorch-docker"
version = "0.1.0"
description = ""
authors = ["Koki Yamada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu118", source = "torch_cu118"}
torchvision = {version = "^0.16.0+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.1.0+cu118", source = "torch_cu118"}


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
